Fix bug #15462: a comment can again be modified by its author
The comments widget sends back to the server, in a PUT request, the
whole JSON representation of a comment it got from a GET request, with
only the text changed. Since the migration to WildFly 39, such a request
was rejected with a 400 HTTP status: the JSON representation carries the
read-only properties of the comment's author (blockedState, status, ...),
and the Jackson mapper used by RESTEasy 6.2 rejects any property that is
unknown to the entity to deserialize.

Until 6.4, the REST API tolerated those properties without anyone knowing
why: the PSU SCIM library then embedded in the WAR registered for the
whole application a ContextResolver<ObjectMapper> whose mapper ignored
the unknown properties. With the switch to Apache SCIMple, whose JSON
provider is scoped to the SCIM resources only, that resolver went away
and the REST API fell back on the default, strict, mapper of RESTEasy.

So, Silverpeas now provides its own ContextResolver<ObjectMapper> to the
JAX-RS runtime. The mapper it serves is built by the new method
JSONCodec.newObjectMapper(), so that a bean is (un)marshalled the same
way by the REST API and by the JSON codec: Jackson and Jakarta XML
Binding annotations are both taken into account, null properties are
omitted, and unknown properties are ignored. The codec also uses now a
single shared mapper instead of building a new one at each call.

Also fix the URI of the comment returned by the PUT request, which
carried the comment identifier twice.